# htmx-trello-rust

./: Cargo.toml  README.md  build.rs
.sqlx/: query-1031ea2aee43f5f6d91bb0e9bb439e66b53e5f8a7b4db7c5dcc2d81452b5da92.json  query-122156d61de50f1551e63a416464fa438a847f277166889c53d4467ca5f6b5d0.json  query-3e8997d84e35ef27fd3c81d2cf5a4189891fc33e7cfbf2c003ba3da7858e766e.json  query-5e9e270ebccab6fbc0d6db98846c8fa2a20f67912f040b2244804815bdd8fdc3.json  query-8aab31efe1ba5b1192c74d04ef3a89b229aacee1fbf5f44b5e58c13ebdc4b70a.json  query-9dbe52f87878aaf432a254354af0b65438b856e7b3977ed0940bc8f16f250b0c.json  query-bbff368411a923c85b1fd17bd988aa9ac42d508e4c76128366aa916cedc941ae.json  query-bc21025e9d04ee167870b2d2b9a99814a5b9d73d3db2f47a616ef9b4b40f4d0a.json  query-c63b669dcfb6ab9e2323d716eb7d4e4f1058a43f7122fb17f79d30e0d9fa00ff.json  query-cb30480c819ec3834623fd43d491795f5075acd634101f20cc3a20c124ae909e.json  query-edb42dbebf7068c1baff18ba4d3fc97876cfab56d5acd042a8a6c0059cc96b61.json
migrations/: 0001_create.sql  001_create.sql
migrations_debug/: 0001_create.sql  001_insert_examples.sql
src/: board.rs  card.rs  db.rs  html.rs  main.rs  models.rs  util.rs
static/: index.css  placement.js
