[package]
name = "htmx-trello-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.2"
actix-web = "4"
async-trait = "0.1.74"
derive_more = "0.99.17"
env_logger = "0.10.1"
maud = { version = "*", features = ["actix-web"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.108"
sqlx = { version = "0.7.3", features = ["runtime-tokio-native-tls", "sqlite", "macros"]}

[build-dependencies]
dotenvy = "0.15.7"
